[package]
name = "rl-replay-zone-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxcars = "0.9.10"
piston = "0.53.0"
piston2d-graphics = "0.43.0"
pistoncore-glutin_window = "0.71.0"
piston2d-opengl_graphics = "0.82.0"
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
voronoice = "0.2.0"